动态费用，路径分配，整合修改